deployment/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-backend
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nodejs-backend
    spec:
      containers:
      - name: nodejs-backend
        image: dhanifajar15/nodejs-backend:${IMAGE_TAG}
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
        resources:
          requests:
            memory: "500Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-backend
  namespace: ${NAMESPACE}
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: nodejs-backend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-backend-ingress
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host:  ${INGRESS_HOST}
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: nodejs-backend
            port:
              number: 80
